--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -95,6 +95,11 @@
                                 <a class="nav-link" href="{{ url_for('booking.dashboard') }}">Book a Flight</a>
                             </li>
                         {% endif %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('booking.calendar_view') }}">
+                                <i class="fas fa-calendar-alt me-1"></i>Calendar
+                            </a>
+                        </li>
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
