--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -88,7 +88,7 @@
                     {% if current_user.is_authenticated %}
                         {% if current_user.is_admin %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('admin.admin_dashboard') }}">Admin Dashboard</a>
+                                <a class="nav-link" href="{{ url_for('admin.dashboard') }}">Admin Dashboard</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
